Changed <h2>  css to make sure the title visible after changing the page size in site.css

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -255,7 +255,7 @@ h2 {
     border-radius: 20px;
     background-color: rgba(237, 217, 179, 0.7);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    width: 400px;
+    width: 80%;
     margin: 0px 0px 10px 350px;
 }
 
